# meeting-notes-agent-app

./: .gitignore  LICENSE  Makefile  README.md  docker-compose.yml
asr-service/: README.md  pyproject.toml  start.sh
asr-service/asr_service/: app.py  config.py  engine.py  merge.py  types.py
asr-service/scripts/: fetch-weights.sh
asr-service/tests/: test_app.py  test_config.py  test_engine.py  test_merge.py  test_types.py
backend/: .dockerignore  .env.example  Dockerfile  README.md  asr_client.py  asr_config.py  audio_utils.py  config_store.py  database.py  lm_config.json  lm_config.py  main.py  models.py  pyproject.toml  schemas.py  seed.py  storage.py  telemetry.py  telemetry_config.py  transcript_format.py  whisper_config.py  whisper_utils.py
backend-v2/: .env.example  README.md  alembic.ini  pyproject.toml
backend-v2/alembic/: env.py
backend-v2/alembic/versions/: 0001_initial.py
backend-v2/config/: profiles.json  runtime.json
backend-v2/config/evaluation/: features.json  judge.json
backend-v2/scripts/: build_benchmark_gold.py  evaluate.py  evaluate_contract_persistence.py  evaluate_evidence_effectiveness.py  evaluate_evidence_memory.py  evaluate_feature.py  evaluate_generation_quality.py  evaluate_instruction_effectiveness.py  evaluate_instruction_runtime.py  evaluate_phase3.py  evaluate_source_verification_judge.py  fetch_benchmarks.py  inspect_evaluation_trace.py  probe_lm_studio.py  qualify_development_runtime.py  qualify_remote_judge.py  report_evaluation.py
backend-v2/src/notes_agent_v2/: __init__.py  app.py
backend-v2/src/notes_agent_v2/api/: __init__.py  presets.py
backend-v2/src/notes_agent_v2/domain/: __init__.py  document.py  evidence.py  planning.py  quality.py  run.py  transcript.py
backend-v2/tests/contract/: test_import_boundaries.py  test_repository_naming.py
backend-v2/tests/integration/: test_migrations.py  test_persistence.py
backend-v2/tests/live/: __init__.py  test_lm_studio.py
backend-v2/tests/unit/: test_app.py
backend-v2/tests/unit/domain/: __init__.py  (+1 more)
backend/agents/: __init__.py  base.py  context.py  core_agents.py  definitions.py  domain_agents.py  lab_runner.py  llm.py  orchestrator.py  outputs.py  pipeline.py  registry.py  tools.py  verifiers.py  workflow_spec.py  workflows.py
backend/eval/: __init__.py  __main__.py  cases.py  dataset.py  download_datasets.py  evaluators.py  metrics.py  public_cases.py  testing_lab.ipynb
backend/eval/data/: manifest.json
backend/routers/: domains.py  export.py  lab.py  notes.py  projects.py  settings.py  summarize.py  transcribe.py  uploads.py  workflow.py
backend/tests/: conftest.py  test_agents.py  test_asr_client.py  test_contracts.py  test_eval.py  test_eval_metrics.py  test_llm.py  test_models_diarized.py  test_orchestrator_e2e.py  test_outputs.py  test_pipeline.py  test_project_speakers.py  test_settings_asr.py  test_storage_migration.py  test_templates_workflow_config.py  test_transcribe_router.py  test_transcript_format.py  test_unit.py  test_workflow_spec.py
(+185 files in other folders)
