[project]
name = "asr-service"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.100.0",
    "uvicorn[standard]>=0.23.0",
    "python-multipart>=0.0.7",
    "mlx-whisper>=0.4.0",
    "pyannote.audio>=3.1.0",
    "torch>=2.2.0",
]

[dependency-groups]
test = ["pytest>=8.0.0", "httpx>=0.27.0"]

[tool.uv]
default-groups = ["test"]

[tool.pytest.ini_options]
pythonpath = ["."]
