[project]
name = "meeting-notes-agent-v2"
version = "0.1.0"
description = "Standalone v2 backend for Meeting Notes Agent"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "alembic>=1.13",
    "fastapi",
    "httpx>=0.27",
    "lmstudio>=1.5,<2",
    "opentelemetry-exporter-otlp-proto-http>=1.30",
    "opentelemetry-sdk>=1.30",
    "pydantic-ai-slim[openai]>=2.5,<3",
    "pydantic-settings",
    "pydantic>=2.7",
    "sqlalchemy>=2",
    "uvicorn[standard]",
]

[dependency-groups]
eval = ["pydantic-evals>=2.5"]
test = [
    "pytest-asyncio>=0.23",
    "pytest>=8",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/notes_agent_v2"]

[tool.pytest.ini_options]
testpaths = ["tests"]
markers = [
    "lm_studio: requires the approved local LM Studio runtime",
]

[tool.uv]
default-groups = ["test"]
