[project]
name = "meeting-notes-agent"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.100.0",
    "uvicorn[standard]>=0.23.0",
    "sqlalchemy>=2.0.0",
    "python-multipart>=0.0.7",
    "aiofiles>=23.0.0",
    "python-dotenv>=1.0.0",
    "httpx>=0.27.0",
]

[dependency-groups]
test = [
    "pytest>=8.0.0",
    "rouge-score>=0.1.2",
    "bert-score>=0.3.13",
    "pandas>=2.0.0",
    "ipykernel>=6.0.0",
    "datasets>=2.20.0",
    "requests>=2.31.0",
]
